# cuda_bayer_dithering

./: .gitignore  CMakeLists.txt  README.md
includes/: BayerDithering.h  BayerProcessor.h  Image.h  NetpbmReader.h  PBMPixelReader.h  PGMPixelReader.h  PPMPixelReader.h  PXMPixelReader.h  Pixel.h
includes/dithering/: BayerDithering.h  BayerProcessor.h  BayerResult.h  BayerResultExporter.h
includes/utils/: FunctionTimer.h  Image.h  Pixel.h
includes/utils/bitmap/: BitmapReader.h  BitmapWriter.h
result/: result1.csv  results.csv
sample_images/: snail.pnm
scripts/: comment_remover.py  generate_bayer_matrix.py
src/: BayerDithering.cpp  BayerKernel.cu  BayerProcessor.cpp  BitmapReader.cpp  BitmapWriter.cpp  Image.cpp  NetpbmReader.cpp  PBMPixelReader.cpp  PGMPixelReader.cpp  PPMPixelReader.cpp  Pixel.cpp  main.cpp
src/dithering/: BayerDithering.cpp  BayerKernel.cu  BayerProcessor.cpp  BayerResult.cpp  BayerResultExporter.cpp
src/utils/: Image.cpp  Pixel.cpp
src/utils/bitmap/: BitmapReader.cpp  BitmapWriter.cpp
